--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,11 @@
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/footer.css">
+    <link rel="stylesheet" type="text/css" href="/css/home.css">
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital@1&family=Yellowtail&display=swap');
+    </style>
 
 </head>
 <body>
