--- a/views/_homeview.ejs
+++ b/views/_homeview.ejs
@@ -6,3 +6,9 @@
     <button id="emp">Employee</button>
     <button id="job">Job Seeker</button>
 </div>
+
+<div class="form-up">
+
+</div>
+
+<script type="text/javascript" src="/js/homeview.js"></script>
