--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -85,6 +85,11 @@
     color: black;
 }
 
+.form-up form button:hover
+{
+    background: rgb(61, 165, 155);
+}
+
 .form-up form input::placeholder
 {
     color: thistle;
