--- a/views/_signUpJob.ejs
+++ b/views/_signUpJob.ejs
@@ -2,10 +2,11 @@
 
 <div class="form-up">
     <form action="sign-up/job-seeker/" method="post">
-        <input type="email" required placeholder="harrypotter@hogwarts.uk">
-        <input type="password" required placeholder="Password">
-        <input type="password" required placeholder="Confirm Password">
-        <input type="text" required placeholder="Enter Referral Code">
+        <input name="name" type="text" required placeholder="Harry Potter">
+        <input name="email" type="email" required placeholder="harrypotter@hogwarts.uk">
+        <input name="pwd" type="password" required placeholder="Password">
+        <input name="confirmPwd" type="password" required placeholder="Confirm Password">
+        <input name="referralCode" type="text" required placeholder="Enter Referral Code">
         <button type="submit">Submit</button>
     </form>
 </div>
