--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -4,8 +4,8 @@
     </div>
 
     <div class="links">
-        <a href="/sign-up/employee">Sign Up For Employee</a>
-        <a href="/sign-up/job-seeker">Sign Up For Job Seeker</a>
+        <a href="/employees/sign-up">Sign Up For Employee</a>
+        <a href="/referees/sign-up">Sign Up For Job Seeker</a>
     </div>
 
 </header>
