--- a/views/_homeview.ejs
+++ b/views/_homeview.ejs
@@ -1,8 +1,8 @@
-<p class="welcome-heading2">Are you an Employee or Job Seeker?</p>
+<p class="welcome-heading2">Are you an Employee or Referee?</p>
 
 <div class="emp-job">
-    <button id="emp">Employee</button>
-    <button id="job">Job Seeker</button>
+    <button id="emp">Login as Employee</button>
+    <button id="job">Login as Referee</button>
 </div>
 
 <div class="form-up">
