--- a/views/_signUpEmp.ejs
+++ b/views/_signUpEmp.ejs
@@ -14,13 +14,15 @@
             <input name="email" type="email" required placeholder="harrypotter@hogwarts.uk">
             <span>*</span>
         </div>
-        <div>
-            <input name="password" type="password" required placeholder="Password">
+        <div class="pwd">
+            <input id="pwd-input" name="password" type="password" required placeholder="Password">
             <span>*</span>
+            <i id="pwd-input-icon" class="fas fa-eye"></i>
         </div>
-        <div>
-            <input name="confirmPwd" type="password" required placeholder="Confirm Password">
+        <div class="pwd">
+            <input id="confirm-pwd-input" name="confirmPwd" type="password" required placeholder="Confirm Password">
             <span>*</span>
+            <i id="confirm-pwd-input-icon" class="fas fa-eye"></i>
         </div>
         
         <button type="submit">Submit</button>
