--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,3 +7,5 @@
 <% } else if(title=="Referral Home | Job Seeker SignUp") {%>
     <%- include("_signUpJob"); %>
 <% } %>
+
+<script type="text/javascript" src="/js/homeview.js"></script>
