passport local strategy

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -41,7 +41,8 @@ header .links
 {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     text-align: left;
     font-size: 16px;
     font-family: monospace;
