--- a/views/_signUpJob.ejs
+++ b/views/_signUpJob.ejs
@@ -1,4 +1,4 @@
-<p class="welcome-heading2">Sign Up for Job Seeker</p>
+<p class="welcome-heading2">Sign Up for Referee</p>
 
 <div class="form-up">
     <form action="/referees/sign-up" method="post">
