--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,17 +10,14 @@
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
     <script src="https://kit.fontawesome.com/a5a7a79d9a.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/footer.css">
     <link rel="stylesheet" type="text/css" href="/css/home.css">
 
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital@1&family=Yellowtail&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Source+Serif+Pro:ital@1&family=Yellowtail&display=swap');
     </style>
 
 </head>
@@ -30,6 +27,30 @@
         <%- body %>
     </div>
     <%- include("_footer") %>
+
+
+    <script>
+        <% if(flash.success && flash.success.length>0) { %>
+            new Noty({
+                theme:"relax",
+                text:"<%= flash.success %>",
+                type:"success",
+                layput:"topRight",
+                timeout:1700
+            }).show();
+        <% } %>
+
+        <% if(flash.error && flash.error.length>0) { %>
+            new Noty({
+                theme:"relax",
+                text:"<%= flash.error %>",
+                type:"error",
+                layput:"topRight",
+                timeout:1700
+            }).show();
+        <% } %>
+
+    </script>
 
     <%- script %>
 </body>
