employee profile part 1

--- a/views/_employeePage.ejs
+++ b/views/_employeePage.ejs
@@ -1,1 +1,17 @@
-Employee
+<div class="referral-code-container">
+    <div class="title">Your Referral Code</div>
+    <div class="referral-code"> 
+        <%= locals.user.referralCode %> 
+    </div>
+    <div class="social">
+        <span>Share it On:</span>
+        <ul class="horizontal center social-icons">
+            <li> <a href="https://www.linkedin.com/in/manjarijain/" target="_blank"> <i class="fab fa-linkedin-in"></i></a></li>
+            <li> <a href="mailto:manjarijain98@gmail.com" target="_blank"> <i class="fab fa-google-plus-g"></i></a></li>
+            <li> <a href="https://www.facebook.com/Jain.Manjari?ref=bookmarksk" target="-_blank"> <i class="fab fa-facebook-f"></i></a></li>
+            <li> <a href="https://www.quora.com/profile/Manjari-Jain-4" target="-_blank"> <i class="fab fa-quora"></i></a></li>
+            <li> <a href="https://github.com/JainManjari" target="-_blank"> <i class="fab fa-github"></i></a></li>
+            
+        </ul>
+    </div>
+</div>
