--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,8 @@
-<h1 class="welcome-heading">Welcome to the Referral</h1>
+<% if(!locals.user) {%>
+    <h1 class="welcome-heading">Welcome to the Referral</h1>
+<% } else { %>
+    <h1 class="welcome-heading">Welcome to the Referral, <%= locals.user.firstName%> <span>:)</span>!</h1>
+<% } %>
 
 <% if(!locals.user) {%>
     <% if(title=="Referral Home") {%>
