--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,13 +11,13 @@
     <script src="https://kit.fontawesome.com/a5a7a79d9a.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/footer.css">
     <link rel="stylesheet" type="text/css" href="/css/home.css">
-
+    <link rel="stylesheet" type="text/css" href="/css/profile.css">
+    <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Source+Serif+Pro:ital@1&family=Yellowtail&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Source+Serif+Pro:ital@1&family=Taviraj&family=Yellowtail&display=swap');
     </style>
 
 </head>
