--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -34,6 +34,7 @@
     margin-left: 3px;
     color: white;
     font-style: italic; 
+    text-decoration: none;
 }
       
 #layout-footer div a:hover 
