--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,7 +1,7 @@
 <footer id="layout-footer">
 
             <div style="margin:auto">
-                <span>&copy Referral</span>
+                <span>&copy Grofers</span>
                 <span class="initiated">(Founder & Developer
                     <a href="http://thehindflora.com/" target="_blank"><i class="fab fa-pagelines"></i>  TheHindFlora</a>)
                 </span>
