--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-        <a href="/">Referral</a>
+        <a href="/"><img src="https://avatars.githubusercontent.com/u/8791674?s=280&v=4"></a>
     </div>
     
 
