--- a/views/_refereePage.ejs
+++ b/views/_refereePage.ejs
@@ -11,9 +11,9 @@
         <img src="https://img.icons8.com/doodle/50/000000/the-toast--v2.png"/>!
     </span> 
     <br>
-    Because of your successful referral
+    Because of your successful referral=>
     <%= referedBy.firstName %>
     <%= referedBy.lastName %>
     <a href="mailto:<%=referedBy.email%>" target="_blank"><%= referedBy.email %></a>
-    was able to get &#8377 100 Grofers Cashback!
+    was able to get &#8377 100 Cashback from Grofers!
 </div>
