--- a/views/_employeePage.ejs
+++ b/views/_employeePage.ejs
@@ -42,3 +42,8 @@
         </div>
     </div>
 <% } %>
+
+
+<div class="delete-emp-acct">
+    <a href="/employees/delete-account">Remove Account?</a>
+</div>
