--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -2,7 +2,7 @@
 
             <div style="margin:auto">
                 <span>&copy Grofers</span>
-                <span class="initiated">(Founder & Developer
+                <span class="initiated">(Developer
                     <a href="http://thehindflora.com/" target="_blank"><i class="fab fa-pagelines"></i>  TheHindFlora</a>)
                 </span>
             </div>
