--- a/views/_employeePage.ejs
+++ b/views/_employeePage.ejs
@@ -16,6 +16,10 @@
     </div>
 </div>
 
+<div class="change-code">
+    <a href="/employees/edit-code">Edit Referral Code</a>
+</div>
+
 
 <% if(referees.length>0) {%>
     <div class="refers-list">
