--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="/css/footer.css">
     <link rel="stylesheet" type="text/css" href="/css/home.css">
     <link rel="stylesheet" type="text/css" href="/css/profile.css">
+    <link rel="stylesheet" type="text/css" href="/css/editCode.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Antic&family=Cinzel:wght@500&family=Lobster&family=Marcellus+SC&family=Playball&family=Press+Start+2P&family=Source+Serif+Pro:ital@1&family=Syncopate&family=Taviraj&family=Yellowtail&display=swap');
