--- a/views/_refereePage.ejs
+++ b/views/_refereePage.ejs
@@ -17,3 +17,8 @@
     <a href="mailto:<%=referedBy.email%>" target="_blank"><%= referedBy.email %></a>
     was able to get &#8377 100 Cashback from Grofers!
 </div>
+
+
+<div class="delete-job-acct">
+    <a href="/referees/delete-account">Remove Account?</a>
+</div>
