sending out emails for referral update part 2

--- a/views/mailers/referees/update_referral_email.ejs
+++ b/views/mailers/referees/update_referral_email.ejs
@@ -22,9 +22,9 @@
         Hi <%= user.employee.firstName %>,
     </p>
     <br> 
-    <p>This is to inform you that your referral code has been updated!</p>
+    <p>This is to inform you that your referred code has been updated!</p>
     <p id="login-p"><br>
-                Here is your new referral code:
+                Here is your new referred code:
                 <br>
                 <span style="margin-top: 10px;margin-left: 60px;">
                     <strong> <%= user.referralCode %></strong>
@@ -32,9 +32,6 @@
                 <br>
                 <br>
                
-    </p>
-    <p>
-        All your referees will also be notified about this updation.
     </p>
     <br><br>
     <span>Looking forward for your contribution.</span>
