sending out emails for referees part 2

--- a/views/mailers/referees/signup_email.ejs
+++ b/views/mailers/referees/signup_email.ejs
@@ -44,7 +44,8 @@
     </p>
     <br>
     <p>
-        You are being successfully referred by <%= user.refer.firstName %> <%= user.refer.lastName%>.
+        You are being successfully referred by <b><%= user.refer.firstName %> <%= user.refer.lastName%></b>.
+        <br>
         All the best for the hiring process!
     </p>
     <br>
