sending out emails for referee removal part 1

--- a/views/mailers/employees/referee_remove_email.ejs
+++ b/views/mailers/employees/referee_remove_email.ejs
@@ -23,9 +23,10 @@
     </p>
     <br> 
     <p>
-        This is to inform you that <b><%= user.referee.firstName%></b> has successfully used your referral code <b><%= user.refer.referralCode%></b>.
+        This is to inform you that <b><%= user.referee.firstName%></b> has removed their account from the portal.
     </p>
-    <br><br>
+    <br>
+    <br>
     <span>Looking forward for your contribution.</span>
     <br>
     <p id="sign-p">With best regards,<br>
