--- a/views/_refereePage.ejs
+++ b/views/_refereePage.ejs
@@ -15,7 +15,7 @@
     <%= referedBy.firstName %>
     <%= referedBy.lastName %>
     <a href="mailto:<%=referedBy.email%>" target="_blank"><%= referedBy.email %></a>
-    was able to get &#8377 100 Cashback from Grofers!
+    was able to get &#8377 100 Cashback from Us!
 </div>
 
 
