--- a/views/_employeePage.ejs
+++ b/views/_employeePage.ejs
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="rewards">
-                    &#8377 100 Grofers Cashback
+                    &#8377 100 Cashback
                 </div>
             </li>
         <% } %> 
