--- a/views/mailers/referees/signup_email.ejs
+++ b/views/mailers/referees/signup_email.ejs
@@ -1,6 +1,7 @@
 <head>
     <style>
-        img{
+         img{
+            margin-left: 5px;
             width: 28px;
             height: 23px;
         }
@@ -50,6 +51,6 @@
     </p>
     <br>
     <p id="sign-p">With best regards,<br>
-        <span> <span>Grofers Referral Team</span> <img src="https://avatars.githubusercontent.com/u/8791674?s=280&v=4"></span>
+        <span> <span>Referral Team</span> <img src="https://drive.google.com/uc?export=view&id=1lqVHBEdA9WHcXnZYhdLdJYZnFE7iIIUp"></span>
      </p>
 </div>
