--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <% if(!locals.user) {%>
-    <h1 class="welcome-heading">Welcome to the Grofers Referral Portal</h1>
+    <h1 class="welcome-heading">Welcome to the Referral Portal</h1>
 <% } else { %>
-    <h1 class="welcome-heading">Welcome to the Grofers Referral Portal, <%= locals.user.firstName%> <span>:)</span>!</h1>
+    <h1 class="welcome-heading">Welcome to the Referral Portal, <%= locals.user.firstName%> <span>:)</span>!</h1>
 <% } %>
 
 <% if(!locals.user) {%>
