added more content to readme

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -3,7 +3,7 @@
             <div style="margin:auto">
                 <span>&copy Referral System</span>
                 <span class="initiated">(Developer
-                    <a href="http://thehindflora.com/" target="_blank"><i class="fab fa-pagelines"></i>  TheHindFlora</a>)
+                    <a href="https://jainmanjari.github.io/" target="_blank"><i class="fab fa-pagelines"></i>  TheHindFlora</a>)
                 </span>
             </div>
         
